@@ -1246,6 +1246,13 @@ void	process_proxyconfig(struct zbx_json_parse *jp_data)
  * Author: Alexander Vladishev                                                *
  *                                                                            *
  ******************************************************************************/
+#define CHECK_ARRAY_SIZE(array, alloc, num)				\
+	if (num == alloc)						\
+	{								\
+		alloc = (0 == alloc ? 8 : alloc * 3 / 2);		\
+		array = zbx_realloc(array, alloc * sizeof(*array));	\
+	}
+
 int	get_host_availability_data(struct zbx_json *j)
 {
 	typedef struct
@@ -1274,7 +1281,9 @@ int	get_host_availability_data(struct zbx_json *j)
 	result = DBselect(
 			"select hostid,available,error,snmp_available,snmp_error,"
 				"ipmi_available,ipmi_error,jmx_available,jmx_error"
-			" from hosts");
+			" from hosts"
+			" where status in (%d,%d)",
+			HOST_STATUS_MONITORED, HOST_STATUS_NOT_MONITORED);
 
 	while (NULL != (row = DBfetch(result)))
 	{
@@ -1286,11 +1295,7 @@ int	get_host_availability_data(struct zbx_json *j)
 
 		if (index == ha_num || ha[index].hostid != hostid)
 		{
-			if (ha_num == ha_alloc)
-			{
-				ha_alloc += 8;
-				ha = zbx_realloc(ha, sizeof(zbx_host_availability_t) * ha_alloc);
-			}
+			CHECK_ARRAY_SIZE(ha, ha_alloc, ha_num);
 
 			if (0 != (sz = sizeof(zbx_host_availability_t) * (ha_num - index)))
 				memmove(&ha[index + 1], &ha[index], sz);
@@ -1410,8 +1415,8 @@ void	process_host_availability(struct zbx_json_parse *jp)
 	const char		*p = NULL;
 	char			tmp[HOST_ERROR_LEN_MAX], *sql = NULL, *error_esc;
 	size_t			sql_alloc = 4 * ZBX_KIBIBYTE, sql_offset = 0, tmp_offset;
-	int			no_data, item_type = -1;
-	unsigned char		available = 0;
+	int			availability_alloc = 0, availability_num = 0, availability_last = 0;
+	zbx_host_availability_t	*availability = NULL;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
@@ -1419,11 +1424,11 @@ void	process_host_availability(struct zbx_json_parse *jp)
 	if (SUCCEED != zbx_json_brackets_by_name(jp, ZBX_PROTO_TAG_DATA, &jp_data))
 	{
 		zabbix_log(LOG_LEVEL_WARNING, "invalid host availability data: %s", zbx_json_strerror());
-		goto exit;
+		goto out;
 	}
 
 	if (SUCCEED == zbx_json_object_is_empty(&jp_data))
-		goto exit;
+		goto out;
 
 	sql = zbx_malloc(sql, sql_alloc);
 
@@ -1439,41 +1444,80 @@ void	process_host_availability(struct zbx_json_parse *jp)
 			continue;
 		}
 
+		if (SUCCEED != zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_HOSTID, tmp, sizeof(tmp)) ||
+				SUCCEED != is_uint64(tmp, &hostid))
+		{
+			zabbix_log(LOG_LEVEL_WARNING, "invalid host availability data: %s", zbx_json_strerror());
+			continue;
+		}
+
 		tmp_offset = sql_offset;
-		no_data = 1;
+		availability_last = availability_num;
 
 		zbx_strcpy_alloc(&sql, &sql_alloc, &sql_offset, "update hosts set ");
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_AVAILABLE, tmp, sizeof(tmp)))
 		{
-			available = atoi(tmp);
-			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "available=%d,", available);
-			no_data = 0;
-			item_type = ITEM_TYPE_ZABBIX;
+			CHECK_ARRAY_SIZE(availability, availability_alloc, availability_num);
+
+			availability[availability_num].hostid = hostid;
+			availability[availability_num].type = ITEM_TYPE_ZABBIX;
+			availability[availability_num].available = atoi(tmp);
+			availability[availability_num].errors_from = 0;
+			availability[availability_num].disable_until = 0;
+
+			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "available=%d,",
+					availability[availability_num].available);
+
+			availability_num++;
 		}
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_SNMP_AVAILABLE, tmp, sizeof(tmp)))
 		{
-			available = atoi(tmp);
-			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "snmp_available=%d,", available);
-			no_data = 0;
-			item_type = ITEM_TYPE_SNMPv1;
+			CHECK_ARRAY_SIZE(availability, availability_alloc, availability_num);
+
+			availability[availability_num].hostid = hostid;
+			availability[availability_num].type = ITEM_TYPE_SNMPv1;
+			availability[availability_num].available = atoi(tmp);
+			availability[availability_num].errors_from = 0;
+			availability[availability_num].disable_until = 0;
+
+			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "snmp_available=%d,",
+					availability[availability_num].available);
+
+			availability_num++;
 		}
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_IPMI_AVAILABLE, tmp, sizeof(tmp)))
 		{
-			available = atoi(tmp);
-			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "ipmi_available=%d,", available);
-			no_data = 0;
-			item_type = ITEM_TYPE_IPMI;
+			CHECK_ARRAY_SIZE(availability, availability_alloc, availability_num);
+
+			availability[availability_num].hostid = hostid;
+			availability[availability_num].type = ITEM_TYPE_IPMI;
+			availability[availability_num].available = atoi(tmp);
+			availability[availability_num].errors_from = 0;
+			availability[availability_num].disable_until = 0;
+
+			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "ipmi_available=%d,",
+					availability[availability_num].available);
+
+			availability_num++;
 		}
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_JMX_AVAILABLE, tmp, sizeof(tmp)))
 		{
-			available = atoi(tmp);
-			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "jmx_available=%d,", available);
-			no_data = 0;
-			item_type = ITEM_TYPE_JMX;
+			CHECK_ARRAY_SIZE(availability, availability_alloc, availability_num);
+
+			availability[availability_num].hostid = hostid;
+			availability[availability_num].type = ITEM_TYPE_JMX;
+			availability[availability_num].available = atoi(tmp);
+			availability[availability_num].errors_from = 0;
+			availability[availability_num].disable_until = 0;
+
+			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "jmx_available=%d,",
+					availability[availability_num].available);
+
+			availability_num++;
 		}
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_ERROR, tmp, sizeof(tmp)))
@@ -1481,7 +1525,6 @@ void	process_host_availability(struct zbx_json_parse *jp)
 			error_esc = DBdyn_escape_string_len(tmp, HOST_ERROR_LEN);
 			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "error='%s',", error_esc);
 			zbx_free(error_esc);
-			no_data = 0;
 		}
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_SNMP_ERROR, tmp, sizeof(tmp)))
@@ -1489,7 +1532,6 @@ void	process_host_availability(struct zbx_json_parse *jp)
 			error_esc = DBdyn_escape_string_len(tmp, HOST_ERROR_LEN);
 			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "snmp_error='%s',", error_esc);
 			zbx_free(error_esc);
-			no_data = 0;
 		}
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_IPMI_ERROR, tmp, sizeof(tmp)))
@@ -1497,7 +1539,6 @@ void	process_host_availability(struct zbx_json_parse *jp)
 			error_esc = DBdyn_escape_string_len(tmp, HOST_ERROR_LEN);
 			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "ipmi_error='%s',", error_esc);
 			zbx_free(error_esc);
-			no_data = 0;
 		}
 
 		if (SUCCEED == zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_JMX_ERROR, tmp, sizeof(tmp)))
@@ -1505,17 +1546,9 @@ void	process_host_availability(struct zbx_json_parse *jp)
 			error_esc = DBdyn_escape_string_len(tmp, HOST_ERROR_LEN);
 			zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "jmx_error='%s',", error_esc);
 			zbx_free(error_esc);
-			no_data = 0;
 		}
 
-		if (SUCCEED != zbx_json_value_by_name(&jp_row, ZBX_PROTO_TAG_HOSTID, tmp, sizeof(tmp)))
-		{
-			zabbix_log(LOG_LEVEL_WARNING, "invalid host availability data: %s", zbx_json_strerror());
-			sql_offset = tmp_offset;
-			continue;
-		}
-
-		if (SUCCEED != is_uint64(tmp, &hostid) || 1 == no_data)
+		if (availability_last == availability_num)
 		{
 			zabbix_log(LOG_LEVEL_WARNING, "invalid host availability data");
 			sql_offset = tmp_offset;
@@ -1535,12 +1568,11 @@ void	process_host_availability(struct zbx_json_parse *jp)
 
 	DBcommit();
 
+	DCconfig_update_host_availability(availability, availability_num);
+out:
+	zbx_free(availability);
 	zbx_free(sql);
 
-	if (-1 != item_type)
-		DCconfig_update_host_availability(hostid, item_type, available, 0, 0);
-
-exit:
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
